import new YatimaStdLib fixes

--- a/lean_packages/manifest.json
+++ b/lean_packages/manifest.json
@@ -1,9 +1,13 @@
 {"version": 2,
  "packages":
- [{"url": "https://github.com/yatima-inc/YatimaStdLib.lean",
-   "rev": "f905b68f529de2af44cf6ea63489b7e3cd090050",
+ [{"url": "https://github.com/yatima-inc/lspec/",
+   "rev": "89798a6cb76b2b29469ff752af2fd8543b3a5515",
+   "name": "LSpec",
+   "inputRev": "89798a6cb76b2b29469ff752af2fd8543b3a5515"},
+  {"url": "https://github.com/yatima-inc/YatimaStdLib.lean",
+   "rev": "2c9052355a1d310079c4fab23666bd9e0b5e8e91",
    "name": "YatimaStdLib",
-   "inputRev": "f905b68f529de2af44cf6ea63489b7e3cd090050"},
+   "inputRev": "2c9052355a1d310079c4fab23666bd9e0b5e8e91"},
   {"url": "https://github.com/leanprover/std4/",
    "rev": "f648e43ef696ce1cf7f6ec534ec44c06816380f9",
    "name": "std",
