--- a/lean_packages/manifest.json
+++ b/lean_packages/manifest.json
@@ -1,9 +1,13 @@
 {"version": 2,
  "packages":
- [{"url": "https://github.com/yatima-inc/YatimaStdLib.lean",
-   "rev": "b6b2ff88d06b3c200b9b81aa0a0ac952c35e4631",
+ [{"url": "https://github.com/yatima-inc/lspec/",
+   "rev": "89798a6cb76b2b29469ff752af2fd8543b3a5515",
+   "name": "LSpec",
+   "inputRev": "89798a6cb76b2b29469ff752af2fd8543b3a5515"},
+  {"url": "https://github.com/yatima-inc/YatimaStdLib.lean",
+   "rev": "ea96c587a3f9e8f65719b6f4f70f1305c560c6ac",
    "name": "YatimaStdLib",
-   "inputRev": "b6b2ff88d06b3c200b9b81aa0a0ac952c35e4631"},
+   "inputRev": "ea96c587a3f9e8f65719b6f4f70f1305c560c6ac"},
   {"url": "https://github.com/leanprover/std4/",
    "rev": "f648e43ef696ce1cf7f6ec534ec44c06816380f9",
    "name": "std",
