add BellaNova as a dependency

--- a/lean_packages/manifest.json
+++ b/lean_packages/manifest.json
@@ -4,6 +4,10 @@
    "rev": "89798a6cb76b2b29469ff752af2fd8543b3a5515",
    "name": "LSpec",
    "inputRev": "89798a6cb76b2b29469ff752af2fd8543b3a5515"},
+  {"url": "https://github.com/yatima-inc/Bellanova.lean",
+   "rev": "1e06e09018ec40580e47165dabe0dd7d1ff8eef9",
+   "name": "BellaNova",
+   "inputRev": "1e06e09018ec40580e47165dabe0dd7d1ff8eef9"},
   {"url": "https://github.com/yatima-inc/YatimaStdLib.lean",
    "rev": "dcf9c9f77db7564025f61107e9503caf011e39dc",
    "name": "YatimaStdLib",
