--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -4,15 +4,21 @@
  [{"git":
    {"url": "https://github.com/yatima-inc/YatimaStdLib.lean",
     "subDir?": null,
-    "rev": "515b7eff7765dcf55ce275ac41fa13a30a59f1d0",
+    "rev": "ff0b553a7c2a63d3b0b9c963dfdeebea2a692a10",
     "name": "YatimaStdLib",
-    "inputRev?": "515b7eff7765dcf55ce275ac41fa13a30a59f1d0"}},
+    "inputRev?": "ff0b553a7c2a63d3b0b9c963dfdeebea2a692a10"}},
   {"git":
    {"url": "https://github.com/yatima-inc/lspec/",
     "subDir?": null,
     "rev": "129fd4ba76d5cb9abf271dc29208a28f45fd981e",
     "name": "LSpec",
     "inputRev?": "129fd4ba76d5cb9abf271dc29208a28f45fd981e"}},
+  {"git":
+   {"url": "https://github.com/yatima-inc/FF.lean",
+    "subDir?": null,
+    "rev": "dcedbe5f66dfb6d28f81a1523d14dce227e9197e",
+    "name": "FF",
+    "inputRev?": "dcedbe5f66dfb6d28f81a1523d14dce227e9197e"}},
   {"git":
    {"url": "https://github.com/leanprover/std4/",
     "subDir?": null,
@@ -22,6 +28,6 @@
   {"git":
    {"url": "https://github.com/yatima-inc/Bellanova.lean",
     "subDir?": null,
-    "rev": "5d987647b624e178a24d19bfeed982b8cccc3a1d",
+    "rev": "30912b7ab0c1394eb387b0a503f9af2400a01733",
     "name": "BellaNova",
-    "inputRev?": "5d987647b624e178a24d19bfeed982b8cccc3a1d"}}]}
+    "inputRev?": "30912b7ab0c1394eb387b0a503f9af2400a01733"}}]}
